# l95-parsing

./: .gitignore  README.md  main.py  predict.py  pyproject.toml
prediction_files/: constituencies.txt  dep_rel.txt  dep_rel_from_pretagged.txt
src/: main.py
src/scripts/: parse_task_file.py
src/task/: predict.py
src/task/eval/: constituency.py  dep_rel.py  score.py
src/utils/: __init__.py  conllu.py  constituency.py  dep_rel.py  parse_task_file.py  stan2uni.ini  stanza.py  task_data.py
task/: __init__.py  dep_rel.txt  eval.py  parses.txt  pos_tags.txt  predict.py  sentences.txt  task.json  task_raw.txt
task/eval/: __init__.py  constituency.py  dep_rel.py  score.py
task_files/: constituencies.txt  constituencies_flat.txt  dep_rel_fixed.txt  pos_tags.txt  sentences.txt  task.conllu  task.json  task_fixed.conllu
utils/: conllu.py  constituency.py  data.py  dep_rel.py  parse_task_file.py  stanza.py  task_data.py
