[tool.poetry]
name = "l95-parsing"
version = "0.1.0"
description = "Codebase for L95 final parsing assignment"
authors = ["Yuval Weiss"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
