[tool.poetry]
name = "l95-parsing"
description = "Codebase for L95 final parsing assignment"
authors = ["Yuval Weiss"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201"]