[tool.poetry]
name = "l95-parsing"
description = "Codebase for L95 final parsing assignment"
authors = ["Yuval Weiss"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
pandas = "^2.2.3"
networkx = "^3.4.2"
matplotlib = "^3.9.3"
pyperclip = "^1.9.0"
spacy = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "ERA001", "PGH003"]